--- a/main/docker-compose.yml
+++ b/main/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8600:8600/udp"
     command: "agent -server -ui -node=server-1 -bootstrap-expect=1 -client=0.0.0.0"
     volumes:
-      - C:/baza:/consul/data
+      - ~\Desktop\baza:/consul/data
   app:
     build: .
     restart: always
